# stock-price-prediction-ff

./: .gitignore  LICENSE  Makefile  README.md  projectdocumentation.md  pyproject.toml  requirements.txt
StockPricePrediction/: __init__.py  config.py  data_processing.py  dataset.py  features.py  pipeline.py  plots.py
StockPricePrediction/modeling/: predict.py  train.py
data/interim/: features_dataset.csv
data/processed/: X_features.npy  processed_dataset.csv  y_target.npy
data/processed/splits/: X_test.npy  X_val.npy  y_test.npy  y_train.npy  y_val.npy
models/: best_gru_model.pt  best_lstm_model.pt  gru_model.pt  lstm_model.pt  xgboost_model.pkl
notebooks/: 1.EDA.ipynb  2.CreateFeatures.ipynb  2.CreateFeatures.ipynb.ipynb  3.FeatureEngineering.ipynb  4.TraningModel.ipynb  5.TrainingXGBoostModel.ipynb  best_gru_model.pt  best_lstm_model.pt
references/: feature_scaler.pkl
reports/: metrics.txt
