[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "StockPricePrediction"
version = "0.0.1"
description = "Python-based machine learning model to predict stock prices"
authors = [
  { name = "Kinjal Mitra" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["StockPricePrediction"]
include = ["pyproject.toml", "StockPricePrediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["StockPricePrediction"]
force-sort-within-sections = true

